--- a/frontend_react/public/index.html
+++ b/frontend_react/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    {% comment %} <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> {% endcomment %}
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -15,7 +15,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    {% comment %} <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> {% endcomment %}
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <link rel="manifest" href="./manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -27,7 +27,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>iTunes Visualize App</title>
-    {% comment %} Twitter Card {% endcomment %}
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image"></meta>
     <meta name="twitter:creator" content="@pekonyaaanko"></meta>
     <meta property="og:url" content="https://itunes-visualize-app.herokuapp.com/visualize" />
