~fix # deployとTwitterCardいい感じ

--- a/frontend_react/public/index.html
+++ b/frontend_react/public/index.html
@@ -30,7 +30,7 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image"></meta>
     <meta name="twitter:creator" content="@pekonyaaanko"></meta>
-    <meta property="og:url" content="https://itunes-visualize-app.herokuapp.com/visualize" />
+    <meta property="og:url" content="https://itunes-visualize-app.herokuapp.com/" />
     <meta property="og:title" content="iTunesで聴いた曲のランキングを調べたよ！" />
     <meta property="og:description" content="Detail Description." />
     <meta property="og:image" content="https://3.bp.blogspot.com/-XKyHG9ipUuk/WxvKRN9CeYI/AAAAAAABMn8/usJ7TuHvS4s8Qff7wFV6iY6vtRwM3bQwgCLcBGAs/s400/music_headphone_man.png" />
